// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test BooksPage component should test and take snapshot of Card box 1`] = `
<div
  id="card_div"
>
  <div
    className="container"
    id="img_holder"
  >
    <img
      alt="Avatar"
      className="image"
      id="book_img"
      src="l1.jpg"
      style={
        Object {
          "height": "200px",
          "width": "150px",
        }
      }
    />
    <div
      className="middle"
    >
      <label
        className="text"
        htmlFor="book_img"
        style={
          Object {
            "fontSize": "12px",
            "fontStyle": "bold",
          }
        }
      >
         
        THE PEOPLE IN THE TREE
      </label>
      <button
        className="text"
        name={1}
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "transparent",
            "width": "120px",
          }
        }
        type="btn-sm"
      >
        Read
      </button>
    </div>
  </div>
</div>
`;

exports[`Test BooksPage component should test and take snapshot of Side Bar 1`] = `
<div
  className="row"
>
  <div
    className="col s12 col m2 col l2 sidebar "
    id="sidenava"
  >
    <ul
      className="collapsible"
      data-collapsible="accordion"
    >
      <li>
        <div
          className="collapsible-header"
        >
          <a
            className="heada"
            onClick={[Function]}
            style={Object {}}
          >
            <b>
              SCIENCE&TECH
            </b>
          </a>
        </div>
        <div
          className="collapsible-body"
        >
          <a
            className="boda"
            name="Science"
            onClick={[Function]}
            style={Object {}}
          >
            Science
          </a>
        </div>
        <div
          className="collapsible-body"
        >
          <a
            className="boda"
            name="Technology"
            onClick={[Function]}
            style={Object {}}
          >
            Technology
          </a>
        </div>
        <div
          className="collapsible-body"
        >
          <a
            className="boda"
            name="Computer"
            onClick={[Function]}
            style={Object {}}
          >
            Computer
          </a>
        </div>
      </li>
      <li>
        <div
          className="collapsible-header"
        >
          <a
            className="heada"
            onClick={[Function]}
            style={Object {}}
          >
            <b>
              LITERATURE
            </b>
          </a>
        </div>
        <div
          className="collapsible-body"
        >
          <a
            className="boda"
            name="Fiction"
            onClick={[Function]}
            style={Object {}}
          >
            Fiction
          </a>
        </div>
        <div
          className="collapsible-body"
        >
          <a
            className="boda"
            name="Mystery"
            onClick={[Function]}
            style={Object {}}
          >
            Mystery
          </a>
        </div>
        <div
          className="collapsible-body"
        >
          <a
            className="boda"
            name="Romance"
            onClick={[Function]}
            style={Object {}}
          >
            Romance
          </a>
        </div>
        <div
          className="collapsible-body"
        >
          <a
            className="boda"
            name="Sci-Fiction"
            onClick={[Function]}
            style={Object {}}
          >
            Sci-Fiction
          </a>
        </div>
        <div
          className="collapsible-body"
        >
          <a
            className="boda"
            name="Adventure"
            onClick={[Function]}
            style={Object {}}
          >
            Adventure
          </a>
        </div>
        <div
          className="collapsible-body"
        >
          <a
            className="boda"
            name="Action"
            onClick={[Function]}
            style={Object {}}
          >
            Action
          </a>
        </div>
      </li>
      <li>
        <div
          className="collapsible-header"
        >
          <a
            className="heada"
            onClick={[Function]}
            style={Object {}}
          >
            <b>
              STYLE AND ART
            </b>
          </a>
        </div>
        <div
          className="collapsible-body"
        >
          <a
            className="boda"
            name="Arts"
            onClick={[Function]}
            style={Object {}}
          >
            Arts
          </a>
        </div>
        <div
          className="collapsible-body"
        >
          <a
            className="boda"
            name="Languages"
            onClick={[Function]}
            style={Object {}}
          >
            Languages
          </a>
        </div>
        <div
          className="collapsible-body"
        >
          <a
            className="boda"
            name="Fashion"
            onClick={[Function]}
            style={Object {}}
          >
            Fashion
          </a>
        </div>
        <div
          className="collapsible-body"
        >
          <a
            className="boda"
            name="Food"
            onClick={[Function]}
            style={Object {}}
          >
            Food
          </a>
        </div>
        <div
          className="collapsible-body"
        >
          <a
            className="boda"
            name="Games"
            onClick={[Function]}
            style={Object {}}
          >
            Games
          </a>
        </div>
        <div
          className="collapsible-body"
        >
          <a
            className="boda"
            name="Music"
            onClick={[Function]}
            style={Object {}}
          >
            Music
          </a>
        </div>
      </li>
      <li>
        <div
          className="collapsible-header"
        >
          <a
            className="heada"
            onClick={[Function]}
            style={Object {}}
          >
            <b>
              CAREER & MONEY
            </b>
          </a>
        </div>
        <div
          className="collapsible-body"
        >
          <a
            className="boda"
            name="Management"
            onClick={[Function]}
            style={Object {}}
          >
            Management
          </a>
        </div>
        <div
          className="collapsible-body"
        >
          <a
            className="boda"
            name="Accounting"
            onClick={[Function]}
            style={Object {}}
          >
            Accounting
          </a>
        </div>
        <div
          className="collapsible-body"
        >
          <a
            className="boda"
            name="Entrepreneurship"
            onClick={[Function]}
            style={Object {}}
          >
            Entrepreneurship
          </a>
        </div>
        <div
          className="collapsible-body"
        >
          <a
            className="boda"
            name="Leadership"
            onClick={[Function]}
            style={Object {}}
          >
            Leadership
          </a>
        </div>
      </li>
      <li>
        <div
          className="collapsible-header"
        >
          <a
            className="heada"
            onClick={[Function]}
            style={Object {}}
          >
            <b>
              PERSONAL GROWTH
            </b>
          </a>
        </div>
        <div
          className="collapsible-body"
        >
          <a
            className="boda"
            name="Psychology"
            onClick={[Function]}
            style={Object {}}
          >
            Psychology
          </a>
        </div>
        <div
          className="collapsible-body"
        >
          <a
            className="boda"
            name="Relationships"
            onClick={[Function]}
            style={Object {}}
          >
            Relationships
          </a>
        </div>
        <div
          className="collapsible-body"
        >
          <a
            className="boda"
            name="Self-Improvement"
            onClick={[Function]}
            style={Object {}}
          >
            Self-Improvement
          </a>
        </div>
        <div
          className="collapsible-body"
        >
          <a
            className="boda"
            name="Religion"
            onClick={[Function]}
            style={Object {}}
          >
            Religion
          </a>
        </div>
      </li>
      <li>
        <div
          className="collapsible-header"
        >
          <a
            className="heada"
            onClick={[Function]}
            style={Object {}}
          >
            <b>
              HEALTH & FITNESS
            </b>
          </a>
        </div>
        <div
          className="collapsible-body"
        >
          <a
            className="boda"
            name="Fitness"
            onClick={[Function]}
            style={Object {}}
          >
            Fitness
          </a>
        </div>
        <div
          className="collapsible-body"
        >
          <a
            className="boda"
            name="Nutrition"
            onClick={[Function]}
            style={Object {}}
          >
            Nutrition
          </a>
        </div>
        <div
          className="collapsible-body"
        >
          <a
            className="boda"
            name="Sports"
            onClick={[Function]}
            style={Object {}}
          >
            Sports
          </a>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Test BooksPage component should test and take snapshot of booksCategoryPage 1`] = `
<div
  className="row"
/>
`;

exports[`Test BooksPage component should test and take snapshot of booksCollectionPage 1`] = `
<div
  className="col m10 offset-m2 col l10 offset-l2 col s12 main"
>
  <h4
    className="page-header"
  >
    hello
  </h4>
  <hr />
  <div
    className=" row "
  >
    <div
      className=""
    >
      <ul
        className="collection "
      >
        <li
          className="collection-item avatar"
        >
          <img
            alt=""
            className="circle"
            name={1}
            src=""
          />
          <span
            className="title"
          />
          <p />
          <button
            className="btn-sm btn-warning shop"
            id="wishbtn"
            name={1}
            onClick={[Function]}
            type="button"
          >
            Check details
          </button>
          <a
            className="secondary-content"
            href="#!"
          >
            <i
              className="material-icons "
              style={
                Object {
                  "color": "orange",
                }
              }
            >
              grade
            </i>
          </a>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Test BooksPage component should test and take snapshot of booksFilterPage when bookIsFound is false 1`] = `
<div
  className="container-fluid"
  id="booksearchbar"
>
  <div
    className="row"
  >
    <div
      className="col l3  offset-l2  col m3  offset-m2  col s12 "
    >
      <div>
        <select
          className="browser-default input-field"
          name="filterBy"
          onChange={[Function]}
          value=""
        >
          <option
            defaultValue="bookTitle"
          >
            Search by
          </option>
          <option
            value="bookTitle"
          >
            Title
          </option>
          <option
            value="author"
          >
            Author
          </option>
          <option
            value="category"
          >
            Category
          </option>
          <option
            value="isbn"
          >
            ISBN
          </option>
        </select>
      </div>
    </div>
    <div
      className="col l6 col m6 col s12 "
    >
      <div
        className="input-field"
      >
        <input
          id="search"
          name="searchText"
          onChange={[Function]}
          required={true}
          style={
            Object {
              "backgroundColor": "white",
              "textAlign": "center",
            }
          }
          type="search"
          value=""
        />
        <label
          className="label-icon"
          htmlFor="search"
        >
          <i
            className="material-icons"
          >
            search
          </i>
        </label>
      </div>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col m10 offset-m2 col l10 offset-l2 col s12 main"
    >
      <h4
        className="page-header"
      >
        No search results
      </h4>
      <hr />
      <div
        className=" row "
      >
        <div
          className=""
        >
          <ul
            className="collection "
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Test BooksPage component should test and take snapshot of booksFilterPage when bookIsFound is true 1`] = `
<div
  className="container-fluid"
  id="booksearchbar"
>
  <div
    className="row"
  >
    <div
      className="col l3  offset-l2  col m3  offset-m2  col s12 "
    >
      <div>
        <select
          className="browser-default input-field"
          name="filterBy"
          onChange={[Function]}
          value=""
        >
          <option
            defaultValue="bookTitle"
          >
            Search by
          </option>
          <option
            value="bookTitle"
          >
            Title
          </option>
          <option
            value="author"
          >
            Author
          </option>
          <option
            value="category"
          >
            Category
          </option>
          <option
            value="isbn"
          >
            ISBN
          </option>
        </select>
      </div>
    </div>
    <div
      className="col l6 col m6 col s12 "
    >
      <div
        className="input-field"
      >
        <input
          id="search"
          name="searchText"
          onChange={[Function]}
          required={true}
          style={
            Object {
              "backgroundColor": "white",
              "textAlign": "center",
            }
          }
          type="search"
          value=""
        />
        <label
          className="label-icon"
          htmlFor="search"
        >
          <i
            className="material-icons"
          >
            search
          </i>
        </label>
      </div>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col m10 offset-m2 col l10 offset-l2 col s12 main"
    >
      <h4
        className="page-header"
      >
        Search results
      </h4>
      <hr />
      <div
        className=" row "
      >
        <div
          className=""
        >
          <ul
            className="collection "
          >
            <li
              className="collection-item avatar"
            >
              <img
                alt=""
                className="circle"
                name={1}
                src=""
              />
              <span
                className="title"
              >
                love
              </span>
              <p />
              <button
                className="btn-sm btn-warning shop"
                id="wishbtn"
                name={1}
                onClick={[Function]}
                type="button"
              >
                Check details
              </button>
              <a
                className="secondary-content"
                href="#!"
              >
                <i
                  className="material-icons "
                  style={
                    Object {
                      "color": "orange",
                    }
                  }
                >
                  grade
                </i>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Test BooksPage component should test and take snapshot of booksPage 1`] = `
<div
  className=""
>
  <div
    className="row"
  >
    <div
      className=""
    >
      <div
        className="row"
      >
        <div
          className="col s12 col m2 col l2 sidebar "
          id="sidenava"
        >
          <ul
            className="collapsible"
            data-collapsible="accordion"
          >
            <li>
              <div
                className="collapsible-header"
              >
                <a
                  className="heada"
                  onClick={[Function]}
                  style={Object {}}
                >
                  <b>
                    SCIENCE&TECH
                  </b>
                </a>
              </div>
              <div
                className="collapsible-body"
              >
                <a
                  className="boda"
                  name="Science"
                  onClick={[Function]}
                  style={Object {}}
                >
                  Science
                </a>
              </div>
              <div
                className="collapsible-body"
              >
                <a
                  className="boda"
                  name="Technology"
                  onClick={[Function]}
                  style={Object {}}
                >
                  Technology
                </a>
              </div>
              <div
                className="collapsible-body"
              >
                <a
                  className="boda"
                  name="Computer"
                  onClick={[Function]}
                  style={Object {}}
                >
                  Computer
                </a>
              </div>
            </li>
            <li>
              <div
                className="collapsible-header"
              >
                <a
                  className="heada"
                  onClick={[Function]}
                  style={Object {}}
                >
                  <b>
                    LITERATURE
                  </b>
                </a>
              </div>
              <div
                className="collapsible-body"
              >
                <a
                  className="boda"
                  name="Fiction"
                  onClick={[Function]}
                  style={Object {}}
                >
                  Fiction
                </a>
              </div>
              <div
                className="collapsible-body"
              >
                <a
                  className="boda"
                  name="Mystery"
                  onClick={[Function]}
                  style={Object {}}
                >
                  Mystery
                </a>
              </div>
              <div
                className="collapsible-body"
              >
                <a
                  className="boda"
                  name="Romance"
                  onClick={[Function]}
                  style={Object {}}
                >
                  Romance
                </a>
              </div>
              <div
                className="collapsible-body"
              >
                <a
                  className="boda"
                  name="Sci-Fiction"
                  onClick={[Function]}
                  style={Object {}}
                >
                  Sci-Fiction
                </a>
              </div>
              <div
                className="collapsible-body"
              >
                <a
                  className="boda"
                  name="Adventure"
                  onClick={[Function]}
                  style={Object {}}
                >
                  Adventure
                </a>
              </div>
              <div
                className="collapsible-body"
              >
                <a
                  className="boda"
                  name="Action"
                  onClick={[Function]}
                  style={Object {}}
                >
                  Action
                </a>
              </div>
            </li>
            <li>
              <div
                className="collapsible-header"
              >
                <a
                  className="heada"
                  onClick={[Function]}
                  style={Object {}}
                >
                  <b>
                    STYLE AND ART
                  </b>
                </a>
              </div>
              <div
                className="collapsible-body"
              >
                <a
                  className="boda"
                  name="Arts"
                  onClick={[Function]}
                  style={Object {}}
                >
                  Arts
                </a>
              </div>
              <div
                className="collapsible-body"
              >
                <a
                  className="boda"
                  name="Languages"
                  onClick={[Function]}
                  style={Object {}}
                >
                  Languages
                </a>
              </div>
              <div
                className="collapsible-body"
              >
                <a
                  className="boda"
                  name="Fashion"
                  onClick={[Function]}
                  style={Object {}}
                >
                  Fashion
                </a>
              </div>
              <div
                className="collapsible-body"
              >
                <a
                  className="boda"
                  name="Food"
                  onClick={[Function]}
                  style={Object {}}
                >
                  Food
                </a>
              </div>
              <div
                className="collapsible-body"
              >
                <a
                  className="boda"
                  name="Games"
                  onClick={[Function]}
                  style={Object {}}
                >
                  Games
                </a>
              </div>
              <div
                className="collapsible-body"
              >
                <a
                  className="boda"
                  name="Music"
                  onClick={[Function]}
                  style={Object {}}
                >
                  Music
                </a>
              </div>
            </li>
            <li>
              <div
                className="collapsible-header"
              >
                <a
                  className="heada"
                  onClick={[Function]}
                  style={Object {}}
                >
                  <b>
                    CAREER & MONEY
                  </b>
                </a>
              </div>
              <div
                className="collapsible-body"
              >
                <a
                  className="boda"
                  name="Management"
                  onClick={[Function]}
                  style={Object {}}
                >
                  Management
                </a>
              </div>
              <div
                className="collapsible-body"
              >
                <a
                  className="boda"
                  name="Accounting"
                  onClick={[Function]}
                  style={Object {}}
                >
                  Accounting
                </a>
              </div>
              <div
                className="collapsible-body"
              >
                <a
                  className="boda"
                  name="Entrepreneurship"
                  onClick={[Function]}
                  style={Object {}}
                >
                  Entrepreneurship
                </a>
              </div>
              <div
                className="collapsible-body"
              >
                <a
                  className="boda"
                  name="Leadership"
                  onClick={[Function]}
                  style={Object {}}
                >
                  Leadership
                </a>
              </div>
            </li>
            <li>
              <div
                className="collapsible-header"
              >
                <a
                  className="heada"
                  onClick={[Function]}
                  style={Object {}}
                >
                  <b>
                    PERSONAL GROWTH
                  </b>
                </a>
              </div>
              <div
                className="collapsible-body"
              >
                <a
                  className="boda"
                  name="Psychology"
                  onClick={[Function]}
                  style={Object {}}
                >
                  Psychology
                </a>
              </div>
              <div
                className="collapsible-body"
              >
                <a
                  className="boda"
                  name="Relationships"
                  onClick={[Function]}
                  style={Object {}}
                >
                  Relationships
                </a>
              </div>
              <div
                className="collapsible-body"
              >
                <a
                  className="boda"
                  name="Self-Improvement"
                  onClick={[Function]}
                  style={Object {}}
                >
                  Self-Improvement
                </a>
              </div>
              <div
                className="collapsible-body"
              >
                <a
                  className="boda"
                  name="Religion"
                  onClick={[Function]}
                  style={Object {}}
                >
                  Religion
                </a>
              </div>
            </li>
            <li>
              <div
                className="collapsible-header"
              >
                <a
                  className="heada"
                  onClick={[Function]}
                  style={Object {}}
                >
                  <b>
                    HEALTH & FITNESS
                  </b>
                </a>
              </div>
              <div
                className="collapsible-body"
              >
                <a
                  className="boda"
                  name="Fitness"
                  onClick={[Function]}
                  style={Object {}}
                >
                  Fitness
                </a>
              </div>
              <div
                className="collapsible-body"
              >
                <a
                  className="boda"
                  name="Nutrition"
                  onClick={[Function]}
                  style={Object {}}
                >
                  Nutrition
                </a>
              </div>
              <div
                className="collapsible-body"
              >
                <a
                  className="boda"
                  name="Sports"
                  onClick={[Function]}
                  style={Object {}}
                >
                  Sports
                </a>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      className=""
      id="book_body"
    >
      <div
        className="row"
      >
        <div
          className="container-fluid"
          id="booksearchbar"
        >
          <div
            className="row"
          >
            <div
              className="col l3  offset-l2  col m3  offset-m2  col s12 "
            >
              <div>
                <select
                  className="browser-default input-field"
                  name="filterBy"
                  onChange={[Function]}
                  value=""
                >
                  <option
                    defaultValue="bookTitle"
                  >
                    Search by
                  </option>
                  <option
                    value="bookTitle"
                  >
                    Title
                  </option>
                  <option
                    value="author"
                  >
                    Author
                  </option>
                  <option
                    value="category"
                  >
                    Category
                  </option>
                  <option
                    value="isbn"
                  >
                    ISBN
                  </option>
                </select>
              </div>
            </div>
            <div
              className="col l6 col m6 col s12 "
            >
              <div
                className="input-field"
              >
                <input
                  id="search"
                  name="searchText"
                  onChange={[Function]}
                  required={true}
                  style={
                    Object {
                      "backgroundColor": "white",
                      "textAlign": "center",
                    }
                  }
                  type="search"
                  value=""
                />
                <label
                  className="label-icon"
                  htmlFor="search"
                >
                  <i
                    className="material-icons"
                  >
                    search
                  </i>
                </label>
              </div>
            </div>
          </div>
          <div
            className="row"
          />
        </div>
        <div
          className="row"
        />
        <div
          className="col m10 offset-m2 col l10 offset-l2 col s12 main"
        >
          <h4
            className="page-header"
          >
            Latest Books
          </h4>
          <hr />
          <div
            className="row"
          >
            <div
              className="col m5 col l3 col s6"
            >
              <div
                id="card_div"
              >
                <div
                  className="container"
                  id="img_holder"
                >
                  <img
                    alt="Avatar"
                    className="image"
                    id="book_img"
                    src={undefined}
                    style={
                      Object {
                        "height": "200px",
                        "width": "150px",
                      }
                    }
                  />
                  <div
                    className="middle"
                  >
                    <label
                      className="text"
                      htmlFor="book_img"
                      style={
                        Object {
                          "fontSize": "12px",
                          "fontStyle": "bold",
                        }
                      }
                    >
                       
                    </label>
                    <button
                      className="text"
                      name={1}
                      onClick={[Function]}
                      style={
                        Object {
                          "backgroundColor": "transparent",
                          "width": "120px",
                        }
                      }
                      type="btn-sm"
                    >
                      Read
                    </button>
                  </div>
                </div>
              </div>
               
            </div>
          </div>
        </div>
        <div
          className="col m10 offset-m2 col l10 offset-l2 col s12 main"
        >
          <h4
            className="page-header"
          >
            Available books
          </h4>
          <hr />
          <div
            className=" row "
          >
            <div
              className=""
            >
              <ul
                className="collection "
              >
                <li
                  className="collection-item avatar"
                >
                  <img
                    alt=""
                    className="circle"
                    name={1}
                    src=""
                  />
                  <span
                    className="title"
                  />
                  <p />
                  <button
                    className="btn-sm btn-warning shop"
                    id="wishbtn"
                    name={1}
                    onClick={[Function]}
                    type="button"
                  >
                    Check details
                  </button>
                  <a
                    className="secondary-content"
                    href="#!"
                  >
                    <i
                      className="material-icons "
                      style={
                        Object {
                          "color": "orange",
                        }
                      }
                    >
                      grade
                    </i>
                  </a>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Test BooksPage component should test and take snapshot of booksphotoPage 1`] = `
<div
  className="col m10 offset-m2 col l10 offset-l2 col s12 main"
>
  <h4
    className="page-header"
  >
    Latest Books
  </h4>
  <hr />
  <div
    className="row"
  >
    <div
      className="col m5 col l3 col s6"
    >
      <div
        id="card_div"
      >
        <div
          className="container"
          id="img_holder"
        >
          <img
            alt="Avatar"
            className="image"
            id="book_img"
            src="l1.jpg"
            style={
              Object {
                "height": "200px",
                "width": "150px",
              }
            }
          />
          <div
            className="middle"
          >
            <label
              className="text"
              htmlFor="book_img"
              style={
                Object {
                  "fontSize": "12px",
                  "fontStyle": "bold",
                }
              }
            >
               
              THE PEOPLE IN THE TREE
            </label>
            <button
              className="text"
              name={1}
              onClick={[Function]}
              style={
                Object {
                  "backgroundColor": "transparent",
                  "width": "120px",
                }
              }
              type="btn-sm"
            >
              Read
            </button>
          </div>
        </div>
      </div>
       
    </div>
    <div
      className="col m5 col l3 col s6"
    >
      <div
        id="card_div"
      >
        <div
          className="container"
          id="img_holder"
        >
          <img
            alt="Avatar"
            className="image"
            id="book_img"
            src="l2.jpg"
            style={
              Object {
                "height": "200px",
                "width": "150px",
              }
            }
          />
          <div
            className="middle"
          >
            <label
              className="text"
              htmlFor="book_img"
              style={
                Object {
                  "fontSize": "12px",
                  "fontStyle": "bold",
                }
              }
            >
               
              THE LATE PARADE
            </label>
            <button
              className="text"
              name={2}
              onClick={[Function]}
              style={
                Object {
                  "backgroundColor": "transparent",
                  "width": "120px",
                }
              }
              type="btn-sm"
            >
              Read
            </button>
          </div>
        </div>
      </div>
       
    </div>
    <div
      className="col m5 col l3 col s6"
    >
      <div
        id="card_div"
      >
        <div
          className="container"
          id="img_holder"
        >
          <img
            alt="Avatar"
            className="image"
            id="book_img"
            src="l3.jpg"
            style={
              Object {
                "height": "200px",
                "width": "150px",
              }
            }
          />
          <div
            className="middle"
          >
            <label
              className="text"
              htmlFor="book_img"
              style={
                Object {
                  "fontSize": "12px",
                  "fontStyle": "bold",
                }
              }
            >
               
              I AM THE WOLF
            </label>
            <button
              className="text"
              name={3}
              onClick={[Function]}
              style={
                Object {
                  "backgroundColor": "transparent",
                  "width": "120px",
                }
              }
              type="btn-sm"
            >
              Read
            </button>
          </div>
        </div>
      </div>
       
    </div>
    <div
      className="col m5 col l3 col s6"
    >
      <div
        id="card_div"
      >
        <div
          className="container"
          id="img_holder"
        >
          <img
            alt="Avatar"
            className="image"
            id="book_img"
            src="l4.jpg"
            style={
              Object {
                "height": "200px",
                "width": "150px",
              }
            }
          />
          <div
            className="middle"
          >
            <label
              className="text"
              htmlFor="book_img"
              style={
                Object {
                  "fontSize": "12px",
                  "fontStyle": "bold",
                }
              }
            >
               
              THE PALE NORTH
            </label>
            <button
              className="text"
              name={4}
              onClick={[Function]}
              style={
                Object {
                  "backgroundColor": "transparent",
                  "width": "120px",
                }
              }
              type="btn-sm"
            >
              Read
            </button>
          </div>
        </div>
      </div>
       
    </div>
    <div
      className="col m5 col l3 col s6"
    >
      <div
        id="card_div"
      >
        <div
          className="container"
          id="img_holder"
        >
          <img
            alt="Avatar"
            className="image"
            id="book_img"
            src="l5.jpg"
            style={
              Object {
                "height": "200px",
                "width": "150px",
              }
            }
          />
          <div
            className="middle"
          >
            <label
              className="text"
              htmlFor="book_img"
              style={
                Object {
                  "fontSize": "12px",
                  "fontStyle": "bold",
                }
              }
            >
               
              ADULTOLESENCE
            </label>
            <button
              className="text"
              name={5}
              onClick={[Function]}
              style={
                Object {
                  "backgroundColor": "transparent",
                  "width": "120px",
                }
              }
              type="btn-sm"
            >
              Read
            </button>
          </div>
        </div>
      </div>
       
    </div>
    <div
      className="col m5 col l3 col s6"
    >
      <div
        id="card_div"
      >
        <div
          className="container"
          id="img_holder"
        >
          <img
            alt="Avatar"
            className="image"
            id="book_img"
            src="l6.jpg"
            style={
              Object {
                "height": "200px",
                "width": "150px",
              }
            }
          />
          <div
            className="middle"
          >
            <label
              className="text"
              htmlFor="book_img"
              style={
                Object {
                  "fontSize": "12px",
                  "fontStyle": "bold",
                }
              }
            >
               
              WHAT IT MEANS WHEN A MAN FALL FROM SKY
            </label>
            <button
              className="text"
              name={6}
              onClick={[Function]}
              style={
                Object {
                  "backgroundColor": "transparent",
                  "width": "120px",
                }
              }
              type="btn-sm"
            >
              Read
            </button>
          </div>
        </div>
      </div>
       
    </div>
    <div
      className="col m5 col l3 col s6"
    >
      <div
        id="card_div"
      >
        <div
          className="container"
          id="img_holder"
        >
          <img
            alt="Avatar"
            className="image"
            id="book_img"
            src="l7.jpg"
            style={
              Object {
                "height": "200px",
                "width": "150px",
              }
            }
          />
          <div
            className="middle"
          >
            <label
              className="text"
              htmlFor="book_img"
              style={
                Object {
                  "fontSize": "12px",
                  "fontStyle": "bold",
                }
              }
            >
               
              THE SONG AND THE SILENCE
            </label>
            <button
              className="text"
              name={7}
              onClick={[Function]}
              style={
                Object {
                  "backgroundColor": "transparent",
                  "width": "120px",
                }
              }
              type="btn-sm"
            >
              Read
            </button>
          </div>
        </div>
      </div>
       
    </div>
    <div
      className="col m5 col l3 col s6"
    >
      <div
        id="card_div"
      >
        <div
          className="container"
          id="img_holder"
        >
          <img
            alt="Avatar"
            className="image"
            id="book_img"
            src="l8.jpg"
            style={
              Object {
                "height": "200px",
                "width": "150px",
              }
            }
          />
          <div
            className="middle"
          >
            <label
              className="text"
              htmlFor="book_img"
              style={
                Object {
                  "fontSize": "12px",
                  "fontStyle": "bold",
                }
              }
            >
               
              THE ILIAD HOMMER
            </label>
            <button
              className="text"
              name={8}
              onClick={[Function]}
              style={
                Object {
                  "backgroundColor": "transparent",
                  "width": "120px",
                }
              }
              type="btn-sm"
            >
              Read
            </button>
          </div>
        </div>
      </div>
       
    </div>
  </div>
</div>
`;
